--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>A Portfolio In The Cloud</title>
+    <title>Robin Norwood : Professional Profile</title>
     <link rel="stylesheet" href="styles/main.css"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -14,7 +14,6 @@
   <body>
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
-        <!--Your name goes here -->
         Andrew Park
       </h1>
 
@@ -47,7 +46,7 @@
         <li class="socialWrapper">
           <a class="social color--skyBlue"
              title="Resume"
-             href="#">
+             href="">
             <i class="fa fa-file-text"></i>
           </a>
         </li>
@@ -62,64 +61,21 @@
 
     <div id="example-work"></div>
 
-    </div>
-    <section class="section section--alignCentered section--description">
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving code"
-               class="section__exampleImage"
-               src="images/example1.png"/>
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              Work Example
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving chemistry"
-               class="section__exampleImage"
-               src="images/example2.png"/>
-          <!-- “Chemistry” by Surian Soosay is licensed under CC BY 2.0
-               https://www.flickr.com/photos/ssoosay/4097410999 -->
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered ">
-              Work Example
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving cats"
-               class="section__exampleImage"
-               src="images/example3.png"/>
-          <!-- “Bengal cat” by roberto shabs is licensed under CC BY 2.0
-               https://www.flickr.com/photos/37287295@N00/2540855181 -->
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              Work Example
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-    </section>
-
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
         About Me
       </h2>
     </section>
 
+    <section class="section section--alignCentered section--description">
+      <p class="color--darkgrey section__description">
+        I am learning to code in the cloud! I like to work hard and learn new things.
+        I want to work for a company that will pay me to code in the cloud!
+      </p>
+    </section>
 
 
-    <script type="text/javascript" scr="dist/bundle.js"></script>
-
+    <script type="text/javascript" src="dist/bundle.js">
+    </script>
   </body>
 </html>
