Adds local-web-server. Adds main.js in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </section>
 
 
-    <script type="text/javascript" src="dist/bundle.js">
-    </script>
+    <script type="text/javascript" src="dist/bundle.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
